# random-name-generator

./: Dockerfile  main.py  pyproject.toml
.github/workflows/: action.yml
tests/unit/: test_get_name.py
