[tool.poetry]
name = "name genearator"
version = "0.1.0"
description = "This app generates names"
authors = ["Jai Shankar K S <jaishankar825055@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
black = "^23.7.0"
pytest = "^7.4.0"
faker = "^19.2.0"
httpx = "^0.24.1"
stringcase = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
